# html-template-scraper

./: Cargo.toml  README.md  install.sh  uninstall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  rust-build.yml  typo.yml
src/: lib.rs  main.rs
