[package]
name = "html-template-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Dilshad <a-rustacean@outlook.com>"]

[dependencies]
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = "0.12.12"
scraper = "0.22.0"
tokio = { version = "1.42.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.5.4"
