[package]
name = "html-template-scraper"
version = "0.1.0"
edition = "2021"
authors = ["Dilshad <a-rustacean@outlook.com>"]

[dependencies]
futures = "0.3.31"
lazy_static = "1.5.0"
regex = "1.12.2"
reqwest = "0.12.24"
scraper = "0.24.0"
tokio = { version = "1.48.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.5.7"
